# BrainConnect

./: README.rst  pyproject.toml
BrainConnect/: __main__.py
src/BrainConnect/: __init__.py  data_fusion.py
src/BrainConnect.egg-info/: PKG-INFO
